# arc-reactor

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  README.md  dependencies.txt  reactor  reactor3  requirements.txt  requirements3.txt  test.json
data/: .gitignore  ARC2017_objects.xml  ARC_new_gripper.xml  ARC_packing.xml  ARC_packing_1A5.xml  ARC_packing_1AD.xml  ARC_packing_1B2.xml  ARC_packing_A1.xml  ARC_packing_K3.xml  ARC_stowing.xml  ARC_test.xml  ARC_v1.xml  ARC_v1_test.xml  ARC_v2.xml  deploy  fw.xml  pick_task_generator.py  setup  simple_test.xml  vis_world.xml
data/objects/: .gitignore  gen_order_box
data/robots/: ARC.rob  ARC_gripperX.rob  ARC_new.rob  ARC_v0.rob  gripper7.rob  gripper7_2.rob  gripper7_original.rob  pr2gripper.rob  shelf.rob  tx90l.rob  tx90l_final.rob  tx90l_gripper.rob  tx90l_vacuum.rob
data/simulation/: gen_camera_sim
data/terrains/: LinearShelf.stl  shelf.STL  shelf.stl
db/: bins.json  boxes.json  cameras.json  gen_item_db  item_location_file_pick.json  item_location_file_pick_061217.json  item_location_file_stow.json  item_location_file_stow_061117.json  items.json  order_file.json  order_file_061017.json  order_file_061217.json  planner.json  robots.json  scales.json  spots.json  totes.json  viewpoints.json  workcell.json  workcell_052817_scale_2.json  workcell_061017_frame_scale.json  workcell_062417.json  workcell_071017.json  workcell_pick.json  workcell_stow.json
docker/klampt/: Dockerfile
docker/reactor/: Dockerfile
src/archive/: original_planner.py
test/: __init__.py  color.npy  pc.txt
util/: log.py
(+319 files in other folders)
